Completed Home, About Us and Contact Us with the basics of what they will contain and look like

--- a/website/aboutUs.html
+++ b/website/aboutUs.html
@@ -5,20 +5,46 @@
     <title>About Premier Products | Premier Products</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/aboutUs.css" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   </head>
 
   <body>
     <div id="header">
-
+      <h1>Premier Products</h1>
+      <a href="home.html"><img src="img/logo.png" alt="Premier Products Logo"/></a>
     </div>
 
     <div id="content">    
       <div id="main">
+        <h1>About Premier Products</h1>
+        <div id="map">
+          <h1>Map of where we are:</h1>
+          <img src="img/map.png"/>
+        </div>
+        <div id="contactInfo">
+          <h1>Who We Are</h1>
+          <p>
+            Premier Products is a retail store that specialise
+            in the sale of CD, DVD, Blu-Ray and Video Game
+            Rewinders. These rewinders give the user the ability
+            to rewind their disks back to the original state
+            of when they were bought.
+
+            We also offer Rewinders that can also burn the rewind
+            process to an external disk, so that you can create a
+            reverse copy of the disk.
+          </p>
+
+          <h1>Contact Us</h1>
+          <div class="contact"><h1>E-Mail</h1><p>enquire@premierproducts.com</p></div>
+          <div class="contact"><h1>Address</h1><p>10 Princess Highway<br/>Melbourne, Victoria<br/>Australia 3000</p></div>
+          <div class="contact"><h1>Social Media</h1><p>Facebook<br/>Twitter<br/>Google+</p></div>
+        </div>
         
       </div>
       <div id="navigation">
-        <h2>Navigation</h2>
+        <h1>Navigation</h1>
         <ul>
           <li><a href="home.html">Home</a></li>
           <li>
@@ -38,7 +64,7 @@
 
     <div id="footer">
       <p>
-        Copyright &copy; 2014 Premier Products. All rights reserved.
+        Copyright &copy; 2014 Premier Products. All rights reserved.<br />
         Website developed by Derp &amp; Co.
       </p>
     </div>
