--- a/website/home.html
+++ b/website/home.html
@@ -5,20 +5,34 @@
     <title>Home | Premier Products</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/home.css" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   </head>
 
   <body>
     <div id="header">
-
+      <h1>Premier Products</h1>
+      <a href="home.html"><img src="img/logo.png" alt="Premier Products Logo"/></a>
     </div>
 
     <div id="content">    
       <div id="main">
-        
+        <div class="specials">
+          <h1>Weekly Specials</h1>
+          <span class="special"><img src="img/rewinder10000.png"><h1>Rewinder 10000</h1><h2>Only $899, down from $1299</h2><p>Click to find out more</p></span>
+          <span class="special"><img src="img/originalRewinder.png"><h1>Original Rewinder</h1><h2>Only $499, down from $999</h2><p>Click to find out more</p></span>
+        </div>
+
+        <div class="specials">
+          <h1>New Products</h1>
+          <span class="special"><img src="img/derpaderp.png"><h1>Derpaderp</h1><h2>$299</h2><p>Want a rewinder that does it all?</p><p>People are callit "The Beast"</p>
+            <p>It even plays DVD's too!</p><p>Click to find out more</p></span>
+          <span class="special"><img src="img/pocketDVDRewinder.png"><h1>Pocket DVD Rewinder</h1><h2>$229</h2><p>Ever wanted to carry your DVD rewinder with you at all times?</p>
+            <p>This could be you!</p><p>Click to find out more</p></span>
+        </div>
       </div>
       <div id="navigation">
-        <h2>Navigation</h2>
+        <h1>Navigation</h1>
         <ul>
           <li><a href="home.html">Home</a></li>
           <li>
@@ -38,7 +52,7 @@
 
     <div id="footer">
       <p>
-        Copyright &copy; 2014 Premier Products. All rights reserved.
+        Copyright &copy; 2014 Premier Products. All rights reserved.<br />
         Website developed by Derp &amp; Co.
       </p>
     </div>
