--- a/website/template.html
+++ b/website/template.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
   <head>
-    <title> | Premier Products</title>
+    <title>Home | Premier Products</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/style.css" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
@@ -10,7 +10,8 @@
 
   <body>
     <div id="header">
-
+      <h1>Premier Products</h1>
+      <a href="home.html"><img src="img/logo.png" alt="Premier Products Logo"/></a>
     </div>
 
     <div id="content">    
@@ -18,7 +19,7 @@
         
       </div>
       <div id="navigation">
-        <h2>Navigation</h2>
+        <h1>Navigation</h1>
         <ul>
           <li><a href="home.html">Home</a></li>
           <li>
@@ -38,7 +39,7 @@
 
     <div id="footer">
       <p>
-        Copyright &copy; 2014 Premier Products. All rights reserved.
+        Copyright &copy; 2014 Premier Products. All rights reserved.<br />
         Website developed by Derp &amp; Co.
       </p>
     </div>
