Templates for most pages are done. Image links need to be added but all images are there. Added Google Map map of the location using the API

--- a/website/template.html
+++ b/website/template.html
@@ -25,6 +25,7 @@
           <li>
             Products
             <ul>
+              <li><a href="all.html">All</a></li>
               <li><a href="cdRewinder.html">CD Rewinders</a></li>
               <li><a href="dvdRewinder.html">DVD Rewinders</a></li>
               <li><a href="blurayRewinder.html">Blu-Ray Rewinders</a></li>
