--- a/website/aboutUs.html
+++ b/website/aboutUs.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/aboutUs.css" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script type="text/javascript" src="js/aboutUs.js"></script>
   </head>
 
   <body>
@@ -20,7 +22,7 @@
         <h1>About Premier Products</h1>
         <div id="map">
           <h1>Map of where we are:</h1>
-          <img src="img/map.png"/>
+          <div id="map_canvas"></div>
         </div>
         <div id="contactInfo">
           <h1>Who We Are</h1>
@@ -50,6 +52,7 @@
           <li>
             Products
             <ul>
+              <li><a href="all.html">All</a></li>
               <li><a href="cdRewinder.html">CD Rewinders</a></li>
               <li><a href="dvdRewinder.html">DVD Rewinders</a></li>
               <li><a href="blurayRewinder.html">Blu-Ray Rewinders</a></li>
