--- a/website/home.html
+++ b/website/home.html
@@ -19,16 +19,16 @@
       <div id="main">
         <div class="specials">
           <h1>Weekly Specials</h1>
-          <span class="special"><img src="img/rewinder10000.png"><h1>Rewinder 10000</h1><h2>Only $899, down from $1299</h2><p>Click to find out more</p></span>
-          <span class="special"><img src="img/originalRewinder.png"><h1>Original Rewinder</h1><h2>Only $499, down from $999</h2><p>Click to find out more</p></span>
+          <div class="special"><img src="img/5DiskDVDRewinder1.jpg"><h1>Rewinder 10000</h1><h2>Only $899, down from $1299</h2><p>Click to find out more</p></div>
+          <div class="special"><img src="img/dvdRewinder1.jpg"><h1>Original Rewinder</h1><h2>Only $499, down from $999</h2><p>Click to find out more</p></div>
         </div>
 
         <div class="specials">
           <h1>New Products</h1>
-          <span class="special"><img src="img/derpaderp.png"><h1>Derpaderp</h1><h2>$299</h2><p>Want a rewinder that does it all?</p><p>People are callit "The Beast"</p>
-            <p>It even plays DVD's too!</p><p>Click to find out more</p></span>
-          <span class="special"><img src="img/pocketDVDRewinder.png"><h1>Pocket DVD Rewinder</h1><h2>$229</h2><p>Ever wanted to carry your DVD rewinder with you at all times?</p>
-            <p>This could be you!</p><p>Click to find out more</p></span>
+          <div class="special"><img src="img/ultraDVDRewinder1.jpg"><h1>Derpaderp</h1><h2>$299</h2><p>Want a rewinder that does it all?</p><p>People are callit "The Beast"</p>
+            <p>It even plays DVD's too!</p><p>Click to find out more</p></div>
+          <div class="special"><img src="img/pocketBurner1.jpg"><h1>Pocket DVD Rewinder</h1><h2>$229</h2><p>Ever wanted to carry your DVD rewinder with you at all times?</p>
+            <p>This could be you!</p><p>Click to find out more</p></div>
         </div>
       </div>
       <div id="navigation">
@@ -38,6 +38,7 @@
           <li>
             Products
             <ul>
+              <li><a href="all.html">All</a></li>
               <li><a href="cdRewinder.html">CD Rewinders</a></li>
               <li><a href="dvdRewinder.html">DVD Rewinders</a></li>
               <li><a href="blurayRewinder.html">Blu-Ray Rewinders</a></li>
