Updated Product Lists to have the correct Images, and started products.css to style all product lists for display

--- a/website/all.html
+++ b/website/all.html
@@ -5,7 +5,7 @@
     <title>Home | Premier Products</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/all.css" />
+    <link rel="stylesheet" href="css/products.css" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   </head>
 
@@ -48,7 +48,103 @@
               <strong class="title">DVD Rewinder</strong>
               <div class="rating"><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></div>
             </li>
-            
+
+            <li>
+              <a href="img/cdRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/cdRewinder1.jpg" alt="CD Rewinder"/></a>
+              <strong>CD Rewinder</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/multiCDRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/multiCDRewinder1.jpg" alt="CD Rewinder"/></a>
+              <strong>CD Rewinder</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/pocketCDRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/pocketCDRewinder1.jpg" alt="CD Rewinder"/></a>
+              <strong>CD Rewinder</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/bulkCDRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/bulkCDRewinder1.jpg" alt="CD Rewinder"/></a>
+              <strong>CD Rewinder</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/dvdRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder1.jpg" alt="DVD Rewinder"/></a>
+              <strong>DVD Rewinder</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/5DiskDVDRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/5DiskDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
+              <strong>DVD Rewinder</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/pocketDVDRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/pocketDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
+              <strong>DVD Rewinder</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/ultraDVDRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/ultraDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
+              <strong>DVD Rewinder</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/blurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/blurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
+              <strong>Blu-Ray Rewinder</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/diskDriveBlurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/diskDriveBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
+              <strong>Blu-Ray Rewinder</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/highBlurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/highBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
+              <strong>Blu-Ray Rewinder</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/multiBlurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/multiBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
+              <strong>Blu-Ray Rewinder</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/CDBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/CDBurner1.jpg" alt="Rewind Burner"/></a>
+              <strong>Rewind Burner</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/compBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/compBurner1.jpg" alt="Rewind Burner"/></a>
+              <strong>Rewind Burner</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/pocketBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/pocketBurner1.jpg" alt="Rewind Burner"/></a>
+              <strong>Rewind Burner</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/ultraBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/ultraBurner1.jpg" alt="Rewind Burner"/></a>
+              <strong>Rewind Burner</strong>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>            
           </ul>
         </div>
         
