--- a/website/blurayRewinder.html
+++ b/website/blurayRewinder.html
@@ -5,7 +5,7 @@
     <title>Blu-Ray Rewinders | Premier Products</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/blurayrewinder.css" />
+    <link rel="stylesheet" href="css/products.css" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   </head>
 
@@ -38,25 +38,25 @@
         <div id="productContainer">
           <ul id="productList" class="grid">
             <li>
-              <a href="img/blurayRewinder1Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/blurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
+              <a href="img/blurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/blurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/blurayRewinder2Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/blurayRewinder2.jpg" alt="Blu-Ray Rewinder"/></a>
+              <a href="img/diskDriveBlurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/diskDriveBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/blurayRewinder3Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/blurayRewinder3.jpg" alt="Blu-Ray Rewinder"/></a>
+              <a href="img/highBlurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/highBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/blurayRewinder4Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/blurayRewinder4.jpg" alt="Blu-Ray Rewinder"/></a>
+              <a href="img/multiBlurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/multiBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
