--- a/website/dvdRewinder.html
+++ b/website/dvdRewinder.html
@@ -5,7 +5,7 @@
     <title>DVD Rewinders | Premier Products</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/dvdrewinder.css" />
+    <link rel="stylesheet" href="css/products.css" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   </head>
 
@@ -38,25 +38,25 @@
         <div id="productContainer">
           <ul id="productList" class="grid">
             <li>
-              <a href="img/dvdRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder1.jpg" alt="DVD Rewinder"/></a>
+              <a href="img/dvdRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/dvdRewinder2Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder2.jpg" alt="DVD Rewinder"/></a>
+              <a href="img/5DiskDVDRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/5DiskDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/dvdRewinder3Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder3.jpg" alt="DVD Rewinder"/></a>
+              <a href="img/pocketDVDRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/pocketDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/dvdRewinder4Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder4.jpg" alt="DVD Rewinder"/></a>
+              <a href="img/ultraDVDRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/ultraDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
