--- a/website/cdRewinder.html
+++ b/website/cdRewinder.html
@@ -5,7 +5,7 @@
     <title>CD Rewinders | Premier Products</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/cdrewinder.css" />
+    <link rel="stylesheet" href="css/products.css" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   </head>
 
@@ -38,25 +38,25 @@
         <div id="productContainer">
           <ul id="productList" class="grid">
             <li>
-              <a href="img/cdRewinder1Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/cdRewinder1.jpg" alt="CD Rewinder"/></a>
+              <a href="img/cdRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/cdRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/cdRewinder2Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/cdRewinder2.jpg" alt="CD Rewinder"/></a>
+              <a href="img/multiCDRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/multiCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/cdRewinder3Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/cdRewinder3.jpg" alt="CD Rewinder"/></a>
+              <a href="img/pocketCDRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/pocketCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/cdRewinder4Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/cdRewinder4.jpg" alt="CD Rewinder"/></a>
+              <a href="img/bulkCDRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/bulkCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
