--- a/website/rewindBurners.html
+++ b/website/rewindBurners.html
@@ -5,7 +5,7 @@
     <title>Rewind Burners | Premier Products</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/rewindBurner.css" />
+    <link rel="stylesheet" href="css/products.css" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   </head>
 
@@ -38,25 +38,25 @@
         <div id="productContainer">
           <ul id="productList" class="grid">
             <li>
-              <a href="img/rewindBurner1Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/rewindBurner1.jpg" alt="Rewind Burner"/></a>
+              <a href="img/CDBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/CDBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/rewindBurner2Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/rewindBurner2.jpg" alt="Rewind Burner"/></a>
+              <a href="img/compBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/compBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/rewindBurner3Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/rewindBurner3.jpg" alt="Rewind Burner"/></a>
+              <a href="img/pocketBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/pocketBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/rewindBurner4Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/rewindBurner4.jpg" alt="Rewind Burner"/></a>
+              <a href="img/ultraBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/ultraBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
