--- a/website/home.html
+++ b/website/home.html
@@ -4,8 +4,10 @@
   <head>
     <title>Home | Premier Products</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/style.css"  media="screen and (min-width: 1001px)"/>
+     <link rel="stylesheet" href="css/style-mid.css" media="screen and (max-width: 1000px)" />
+    <link rel="stylesheet" href="css/home.css" media="screen and (min-width: 1001px)" />
+    <link rel="stylesheet" href="css/home-mid.css" media="screen and (max-width: 1000px)" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   </head>
 
@@ -19,16 +21,16 @@
       <div id="main">
         <div class="specials">
           <h1>Weekly Specials</h1>
-          <div class="special"><img src="img/5DiskDVDRewinder1.jpg"><h1>Rewinder 10000</h1><h2>Only $899, down from $1299</h2><p>Click to find out more</p></div>
-          <div class="special"><img src="img/dvdRewinder1.jpg"><h1>Original Rewinder</h1><h2>Only $499, down from $999</h2><p>Click to find out more</p></div>
+          <div class="special"><img src="img/5DiskDVDRewinder1.jpg"><h1>Rewinder 10000</h1><h2 class="offer">Only $899, down from $1299</h2><p>Click to find out more</p></div>
+          <div class="special"><img src="img/dvdRewinder1.jpg"><h1>Original Rewinder</h1><h2 class="offer">Only $499, down from $999</h2><p>Click to find out more</p></div>
         </div>
 
         <div class="specials">
           <h1>New Products</h1>
-          <div class="special"><img src="img/ultraDVDRewinder1.jpg"><h1>Derpaderp</h1><h2>$299</h2><p>Want a rewinder that does it all?</p><p>People are callit "The Beast"</p>
+          <div class="special"><img src="img/ultraDVDRewinder1.jpg"><h1>Derpaderp</h1><h2 class="cost">$299</h2><p>Want a rewinder that does it all?</p><p>People are call it "The Beast"</p>
             <p>It even plays DVD's too!</p><p>Click to find out more</p></div>
-          <div class="special"><img src="img/pocketBurner1.jpg"><h1>Pocket DVD Rewinder</h1><h2>$229</h2><p>Ever wanted to carry your DVD rewinder with you at all times?</p>
-            <p>This could be you!</p><p>Click to find out more</p></div>
+          <div class="special"><img src="img/pocketBurner1.jpg"><h1>Pocket DVD Rewinder</h1><h2 class="cost">$229</h2><p>Ever wanted to carry your DVD rewinder with you at all times?</p>
+            <p>This could be for you!</p><p>Click to find out more</p></div>
         </div>
       </div>
       <div id="navigation">
@@ -36,7 +38,7 @@
         <ul>
           <li><a href="home.html">Home</a></li>
           <li>
-            Products
+            <a href="all.html">Products</a>
             <ul>
               <li><a href="all.html">All</a></li>
               <li><a href="cdRewinder.html">CD Rewinders</a></li>
