Separated responsive css into a hierarchical structure to reduce code repetition.

--- a/website/home.html
+++ b/website/home.html
@@ -4,7 +4,8 @@
   <head>
     <title>Home | Premier Products</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="css/style.css"  media="screen and (min-width: 1001px)"/>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style-full.css"  media="screen and (min-width: 1001px)"/>
      <link rel="stylesheet" href="css/style-mid.css" media="screen and (max-width: 1000px)" />
     <link rel="stylesheet" href="css/home.css" media="screen and (min-width: 1001px)" />
     <link rel="stylesheet" href="css/home-mid.css" media="screen and (max-width: 1000px)" />
