--- a/website/aboutUs.html
+++ b/website/aboutUs.html
@@ -5,6 +5,9 @@
     <title>About Premier Products | Premier Products</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style-full.css"  media="screen and (min-width: 950px)"/>
+     <link rel="stylesheet" href="css/style-mid.css" media="screen and (max-width: 949px)" />
+     
     <link rel="stylesheet" href="css/aboutUs.css" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
