--- a/website/home.html
+++ b/website/home.html
@@ -5,10 +5,12 @@
     <title>Home | Premier Products</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/style-full.css"  media="screen and (min-width: 1001px)"/>
-     <link rel="stylesheet" href="css/style-mid.css" media="screen and (max-width: 1000px)" />
-    <link rel="stylesheet" href="css/home.css" media="screen and (min-width: 1001px)" />
-    <link rel="stylesheet" href="css/home-mid.css" media="screen and (max-width: 1000px)" />
+    <link rel="stylesheet" href="css/style-full.css"  media="screen and (min-width: 950px)"/>
+     <link rel="stylesheet" href="css/style-mid.css" media="screen and (max-width: 949px)" />
+
+    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/home-full.css" media="screen and (min-width: 950px)" />
+    <link rel="stylesheet" href="css/home-mid.css" media="screen and (max-width: 949px)" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   </head>
 
