--- a/website/contactUs.html
+++ b/website/contactUs.html
@@ -9,6 +9,9 @@
      <link rel="stylesheet" href="css/style-mid.css" media="screen and (max-width: 949px)" />
      
     <link rel="stylesheet" href="css/contactUs.css" />
+    <link rel="stylesheet" href="css/contactUs-full.css"  media="screen and (min-width: 555px)"/>
+     <link rel="stylesheet" href="css/contactUs-small.css" media="screen and (max-width: 554px)" />
+
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   </head>
 
@@ -20,30 +23,31 @@
 
     <div id="content">    
       <div id="main">
-        <h1>About Premier Products</h1>
+        <h1>Contact Us</h1>
 
         <form id="contactUsForm" onsubmit="checkContactForm(); return false;">
           <p>Please provide your feedback in the boxes below</p>    
           <p>
-            <label for="firstname">First name:</label>
-            <input name="firstname" id="firstname" onfocus="resetField(this);" />
+            <label for="firstname">* First name:</label>
+            <input type="text" name="firstname" id="firstname" onfocus="resetField(this);" />
           </p>
           <p>
-            <label for="lastname">Last name:</label>
-            <input name="lastname" id="lastname" onfocus="resetField(this);" />
+            <label for="lastname">* Last name:</label>
+            <input type="text" name="lastname" id="lastname" onfocus="resetField(this);" />
           </p>
           <p>
-            <label for="email">E-mail address:</label>
-            <input name="email" id="email" onfocus="resetField(this);" />
+            <label for="email">* E-mail address:</label>
+            <input type="text" name="email" id="email" onfocus="resetField(this);" />
           </p>
           <p>
-            <label for="message">Your Message:</label>
+            <label for="message">* Your Message:</label>
             <textarea name="message" id="message" onfocus="resetField(this);"></textarea>
           </p>
           <p>
-            <input type="checkbox" name="vehicle" value="Bike">
+            <input type="checkbox" name="subscribe" value="">
             <label for="subscribe">Subscribe to our promotions</label>
           </p>
+          <br />
           <p>
             * Required fields
           </p>
