--- a/website/contactUs.html
+++ b/website/contactUs.html
@@ -63,7 +63,7 @@
         <ul>
           <li><a href="home.html">Home</a></li>
           <li>
-            Products
+            <a href="all.html">Products</a>
             <ul>
               <li><a href="all.html">All</a></li>
               <li><a href="cdRewinder.html">CD Rewinders</a></li>
