--- a/website/aboutUs.html
+++ b/website/aboutUs.html
@@ -9,6 +9,9 @@
      <link rel="stylesheet" href="css/style-mid.css" media="screen and (max-width: 949px)" />
      
     <link rel="stylesheet" href="css/aboutUs.css" />
+    <link rel="stylesheet" href="css/aboutUs-full.css"  media="screen and (min-width: 800px)"/>
+     <link rel="stylesheet" href="css/aboutUs-small.css" media="screen and (max-width: 799px)" />
+
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script type="text/javascript" src="js/aboutUs.js"></script>
