Added lightbox shit

--- a/website/all.html
+++ b/website/all.html
@@ -6,9 +6,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/style-full.css"  media="screen and (min-width: 950px)"/>
-     <link rel="stylesheet" href="css/style-mid.css" media="screen and (max-width: 949px)" />
+    <link rel="stylesheet" href="css/style-mid.css" media="screen and (max-width: 949px)" />
+
+    <link rel="stylesheet" type="text/css" href="css/lightbox.css" />
+
     <link rel="stylesheet" href="css/products.css" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="js/lightbox.js"></script>
   </head>
 
   <body>
@@ -40,109 +44,112 @@
         <div id="products">
           <ul id="grid">
             <li class="dvd">
-              <a href="img/dvdRewinder.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder.jpg" alt="DVD Rewinder"/></a>
+              <a href="img/dvdRewinderLarge.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder.jpg" alt="DVD Rewinder"/></a>
               <strong class="title">DVD Rewinder</strong>
+              <p>Hidden text</p>
+
               <div class="rating"><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></div>
             </li>
 
             <li class="dvd">
-              <a href="img/dvdRewinder.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder.jpg" alt="DVD Rewinder"/></a>
+              <a href="img/dvdRewinderLarge.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder.jpg" alt="DVD Rewinder"/></a>
               <strong class="title">DVD Rewinder</strong>
               <div class="rating"><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></div>
             </li>
 
             <li>
-              <a href="img/cdRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/cdRewinder1.jpg" alt="CD Rewinder"/></a>
+              <a href="img/cdRewinder1Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/cdRewinder1.jpg" alt="CD Rewinder"/></a>
+              <strong>CD Rewinder</strong>
+              <p class="detail">Hidden text</p>
+              <p class="price">Price: $249</p>
+              <p class="rating">Rating: 4/5</p>
+            </li>
+            <li>
+              <a href="img/multiCDRewinder1Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/multiCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/multiCDRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/multiCDRewinder1.jpg" alt="CD Rewinder"/></a>
+              <a href="img/pocketCDRewinder1Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/pocketCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/pocketCDRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/pocketCDRewinder1.jpg" alt="CD Rewinder"/></a>
+              <a href="img/bulkCDRewinder1Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/bulkCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/bulkCDRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/bulkCDRewinder1.jpg" alt="CD Rewinder"/></a>
-              <strong>CD Rewinder</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
-            </li>
-            <li>
-              <a href="img/dvdRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder1.jpg" alt="DVD Rewinder"/></a>
+              <a href="img/dvdRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/5DiskDVDRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/5DiskDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
+              <a href="img/5DiskDVDRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/5DiskDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/pocketDVDRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/pocketDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
+              <a href="img/pocketDVDRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/pocketDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/ultraDVDRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/ultraDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
+              <a href="img/ultraDVDRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/ultraDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/blurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/blurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
+              <a href="img/blurayRewinder1Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/blurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/diskDriveBlurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/diskDriveBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
+              <a href="img/diskDriveBlurayRewinder1Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/diskDriveBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/highBlurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/highBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
+              <a href="img/highBlurayRewinder1Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/highBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/multiBlurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/multiBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
+              <a href="img/multiBlurayRewinder1Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/multiBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/CDBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/CDBurner1.jpg" alt="Rewind Burner"/></a>
+              <a href="img/CDBurner1Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/CDBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/compBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/compBurner1.jpg" alt="Rewind Burner"/></a>
+              <a href="img/compBurner1Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/compBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/pocketBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/pocketBurner1.jpg" alt="Rewind Burner"/></a>
+              <a href="img/pocketBurner1Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/pocketBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
             </li>
             <li>
-              <a href="img/ultraBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/ultraBurner1.jpg" alt="Rewind Burner"/></a>
+              <a href="img/ultraBurner1Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/ultraBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
               <p class="price">Price: $249</p>
               <p class="rating">Rating: 4/5</p>
