--- a/website/all.html
+++ b/website/all.html
@@ -49,6 +49,7 @@
 
               <a href="img/dvdRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong class="title">DVD Rewinder</strong>
+              <p class="detail">The original, the classic.  As you can see in the image, it even comes with its own disk!</p>
               <p class="price">Price: $249</p>
               <p class="rating">4.0</p>
             </li>
@@ -56,104 +57,120 @@
             <li class="dvd">
               <a href="img/dvdRewinder2Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder2.jpg" alt="DVD Rewinder"/></a>
               <strong class="title">DVD Rewinder</strong>
+              <p class="detail">The original, the classic.  This one doesn't come with a disk but still costs the same as the one which does.</p>
               <p class="price">Price: $249</p>
               <p class="rating">4.0</p>
             </li>
 
-            <li>
+            <li class="cd">
               <a href="img/cdRewinder1Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/cdRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
-              <p class="detail">Hidden text</p>
+              <p class="detail">Rewind your ancient music CDs.  It says shock resistant on the package, but EVERY report says otherwise...</p>
               <p class="price">Price: $249</p>
               <p class="rating">3.5</p>
             </li>
-            <li>
+            <li class="cd">
               <a href="img/multiCDRewinder1Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/multiCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
+              <p class="detail">Ever wanted to rewind multiple CDs at once?  This one can!  Unfortunately this model rewinds at one quarter the speed of normal rewinders.</p>
               <p class="price">Price: $249</p>
               <p class="rating">3.5</p>
             </li>
-            <li>
+            <li class="cd">
               <a href="img/pocketCDRewinder1Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/pocketCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
+              <p class="detail">Really generic.  Doesn't really do much fancy shizz.</p>
               <p class="price">Price: $249</p>
               <p class="rating">3.5</p>
             </li>
-            <li>
+            <li class="cd">
               <a href="img/bulkCDRewinder1Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/bulkCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
+              <p class="detail">This one looks fancy, that's because it is!  Trust me, it is... Please think it is :(</p>
               <p class="price">Price: $249</p>
               <p class="rating">3.5</p>
             </li>
-            <li>
+            <li class="dvd">
               <a href="img/dvdRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
+              <p class="detail">The original, again!  Seriously, it's so good we put it in the catalog twice.</p>
               <p class="price">Price: $249</p>
               <p class="rating">3.5</p>
             </li>
-            <li>
+            <li class="dvd">
               <a href="img/5DiskDVDRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/5DiskDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p class="detail">This is the grand-daddy of DVD rewinders.  If Cuban cigars were DVD rewinders, they'd be this.  5 disk capacity, 10000x the speed of the next model.  Low price too.</p>
+              <p class="price">Price: $100000</p>
               <p class="rating">3.5</p>
             </li>
-            <li>
+            <li class="dvd">
               <a href="img/pocketDVDRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/pocketDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p class="detail">Small, concise.  Just like this caption.</p>
+              <p class="price">Price: $100</p>
               <p class="rating">3.5</p>
             </li>
-            <li>
+            <li class="dvd">
               <a href="img/ultraDVDRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/ultraDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
+              <p class="detail">This one looks awesome.  There is a reason it's called the ultimate.  Because it is.  The ultimate.  No questions.  The 5 disk one may be slightly better though...</p>
               <p class="price">Price: $249</p>
               <p class="rating">3.5</p>
             </li>
-            <li>
+            <li class="bluray">
               <a href="img/blurayRewinder1Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/blurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p class="detail">We all love high-def, that's a given, but aren't you sick of throwing out your blurays after watching because they can't be rewound?  Here is the answer!</p>
+              <p class="price">Price: $5000</p>
               <p class="rating">3.5</p>
             </li>
-            <li>
+            <li class="bluray">
               <a href="img/diskDriveBlurayRewinder1Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/diskDriveBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p class="detail">Like the other, but compact!  Pay more for less!</p>
+              <p class="price">Price: $5001</p>
               <p class="rating">3.5</p>
             </li>
-            <li>
+            <li class="bluray">
               <a href="img/highBlurayRewinder1Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/highBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p class="detail">The common-or-garden bluray rewinder.  This model is boring.  You pay less, but would you rather be bored?  WOULD YOU?</p>
+              <p class="price">Price: $5</p>
               <p class="rating">3.5</p>
             </li>
-            <li>
+            <li class="bluray">
               <a href="img/multiBlurayRewinder1Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/multiBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p class="detail">Like the standard blu-ray rewinder, but it does two!  Therefore we're justified in charging double.</p>
+              <p class="price">Price: $10000</p>
               <p class="rating">3.5</p>
             </li>
-            <li>
+            <li class="burner">
               <a href="img/CDBurner1Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/CDBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
+              <p class="detail">Creates burns of your dvds as you rewind them!  That's what you want right?  All our consumer surveys said so.</p>
               <p class="price">Price: $249</p>
               <p class="rating">3.5</p>
             </li>
-            <li>
+            <li class="burner">
               <a href="img/compBurner1Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/compBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
+              <p class="detail">Burns dvds, but there is only one tray.  This means it just rewinds.  Casing is barebones and therefore hardcore.</p>
               <p class="price">Price: $249</p>
               <p class="rating">3.5</p>
             </li>
-            <li>
+            <li class="burner">
               <a href="img/pocketBurner1Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/pocketBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
+              <p class="detail">Burns dvds, but there is only one tray.  This means it just rewinds.</p>
               <p class="price">Price: $249</p>
               <p class="rating">3.5</p>
             </li>
-            <li>
+            <li class="burner">
               <a href="img/ultraBurner1Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/ultraBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
+              <p class="detail">Burns dvds, but there is only one tray.  This means it just rewinds.  It's BIG!</p>
               <p class="price">Price: $249</p>
               <p class="rating">3.5</p>
             </li>            
