--- a/website/all.html
+++ b/website/all.html
@@ -9,7 +9,8 @@
      <link rel="stylesheet" href="css/style-mid.css" media="screen and (max-width: 949px)" />
     <link rel="stylesheet" href="css/products.css" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="js/all.js"></script>
+  <script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="js/products.js"></script>
   </head>
 
   <body>
@@ -35,119 +36,126 @@
           <ul id="sortOptions">
             <li id="sortAlpha">Alphabetical</li>
             <li id="sortRating">Rating</li>
+            <li id="sortPrice">Price</li>
+          </ul>
+
+          <p>List by:</p>
+          <ul id="listOptions">
+            <li id="listGrid">Grid</li>
+            <li id="listList" class="selected">List</li>
           </ul>
         </div>
 
-        <div id="products">
-          <ul id="grid">
+        <div id="products" >
+          <ul id="grid" class="grid">
             <li class="dvd">
               <a href="img/dvdRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder1.jpg" alt="DVD Rewinder"/></a>
-              <strong class="title">DVD Rewinder</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">4.0</p>
+              <strong class="title">DVD Rewinder 1000</strong>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
+              <p class="rating">4.5</p>
             </li>
 
             <li class="dvd">
               <a href="img/dvdRewinder2.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder2.jpg" alt="DVD Rewinder"/></a>
-              <strong class="title">DVD Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <strong class="title">DVD Rewinder 1500</strong>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">449</span></p>
               <p class="rating">4.0</p>
             </li>
 
             <li>
               <a href="img/cdRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/cdRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">1149</span></p>
               <p class="rating">3.5</p>
             </li>
             <li>
               <a href="img/multiCDRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/multiCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">3.5</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
+              <p class="rating">3.0</p>
             </li>
             <li>
               <a href="img/pocketCDRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/pocketCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
               <p class="rating">3.5</p>
             </li>
             <li>
               <a href="img/bulkCDRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/bulkCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
               <p class="rating">3.5</p>
             </li>
             <li>
               <a href="img/dvdRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
               <p class="rating">3.5</p>
             </li>
             <li>
               <a href="img/5DiskDVDRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/5DiskDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">399</span></p>
               <p class="rating">3.5</p>
             </li>
             <li>
               <a href="img/pocketDVDRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/pocketDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">399</span></p>
               <p class="rating">3.5</p>
             </li>
             <li>
               <a href="img/ultraDVDRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/ultraDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">399</span></p>
               <p class="rating">3.5</p>
             </li>
             <li>
               <a href="img/blurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/blurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">399</span></p>
               <p class="rating">3.5</p>
             </li>
             <li>
               <a href="img/diskDriveBlurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/diskDriveBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">399</span></p>
               <p class="rating">3.5</p>
             </li>
             <li>
               <a href="img/highBlurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/highBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
               <p class="rating">3.5</p>
             </li>
             <li>
               <a href="img/multiBlurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/multiBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
-              <p class="price">Price: $249</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
               <p class="rating">3.5</p>
             </li>
             <li>
               <a href="img/CDBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/CDBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
-              <p class="price">Price: $249</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
               <p class="rating">3.5</p>
             </li>
             <li>
               <a href="img/compBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/compBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
-              <p class="price">Price: $249</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
               <p class="rating">3.5</p>
             </li>
             <li>
               <a href="img/pocketBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/pocketBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
-              <p class="price">Price: $249</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
               <p class="rating">3.5</p>
             </li>
             <li>
               <a href="img/ultraBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/ultraBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
-              <p class="price">Price: $249</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
               <p class="rating">3.5</p>
             </li>            
           </ul>
