Added unavailability showing (this is really shit).

--- a/website/all.html
+++ b/website/all.html
@@ -45,8 +45,7 @@
 
         <div id="products">
           <ul id="grid">
-            <li class="dvd">
-
+            <li class="dvd unavailable">
               <a href="img/dvdRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong class="title">DVD Rewinder</strong>
               <p class="detail">The original, the classic.  As you can see in the image, it even comes with its own disk!</p>
